style: adjust main layout background color, gap, and stopwatch icon size

--- a/styles.css
+++ b/styles.css
@@ -373,7 +373,6 @@ main {
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  background-color: var(--clr-body-bg);
   border-radius: 5px;
   padding: 0.5rem;
 }
@@ -390,10 +389,15 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.3rem;
+  background-color: var(--clr-body-bg);
+  border-radius: 5px;
+  padding: 0.5rem;
 }
 
 .icon.stopwatch {
+  width: 23px;
+  height: 23px;
   fill: var(--clr-heading);
 }
 
